# misfit-gsuite

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: audit.toml
scripts/: make-team-dmg.sh
src/: App.css  App.tsx  mm-themes.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/api/: calendar.rs  chat.rs  client.rs  docs.rs  drive.rs  fireflies.rs  gemini.rs  gemini_tools.rs  gmail.rs  mod.rs  slack.rs
src-tauri/src/auth/: keychain.rs  mod.rs  oauth.rs
src-tauri/src/background/: mod.rs  pubsub_listener.rs  scheduler.rs
src-tauri/src/commands/: auth_commands.rs  calendar_commands.rs  chat_commands.rs  docs_commands.rs  drive_commands.rs  fireflies_commands.rs  gemini_commands.rs  gemini_docs_commands.rs  gemini_drive_commands.rs  gmail_commands.rs  kg_commands.rs  log_commands.rs  mod.rs  setup_commands.rs  slack_commands.rs
src-tauri/src/db/: kg_queries.rs  mod.rs  queries.rs  schema.rs
src-tauri/src/kg/: crawler.rs  enricher.rs  mod.rs
src/components/auth/: LoginScreen.tsx  SessionTimer.tsx  SetupScreen.tsx
src/components/calendar/: CalendarView.tsx  DayView.tsx  (+3 more)
src/hooks/: useSlackUsers.ts
src/lib/: appSettings.ts  debugLog.ts  domainFilter.ts  geminiContextBridge.ts  tauri.ts  utils.ts
src/store/: authStore.ts  docStore.ts  geminiStore.ts  uiStore.ts
src/types/: index.ts
workers/proxy/: package-lock.json  package.json  wrangler.toml
(+29 files in other folders)
